--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,3 +1,6 @@
+$width: 412px;
+$minPadding: 16px;
+
 * {
     box-sizing: border-box;
 }
@@ -7,12 +10,27 @@ body {
     font-family: Helvetica, Arial, sans-serif;
 }
 
+header {
+    padding: 0 $minPadding;
+    @media only screen and (min-width: $width) {
+        padding: 0 calc(50% - #{$width}/2 + #{$minPadding});
+    }
+    background-color: whitesmoke;
+
+}
+
+main {
+    padding: 0 $minPadding;
+    @media only screen and (min-width: $width) {
+        padding: 0 calc(50% - #{$width}/2 + #{$minPadding});
+    }
+}
+
 h1 {
     margin: 0;
     font-size: 1rem;
     line-height: 2em;
     text-align: center;
-    background-color: whitesmoke;
 }
 
 p {
@@ -31,11 +49,6 @@ button {
 
 .game {
     position: relative;
-    width: 100%;
-    min-width: 320px;
-    max-width: 412px;
-    padding: 0 1em;
-    margin: 0 auto;
 }
 
 .game-result {
