--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -57,7 +57,7 @@ button {
 .game-stats {
     display: flex;
     align-items: center;
-    font-size: 0.75em;
+    font-size: 0.75rem;
 }
 
 .game-result {
