--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -102,22 +102,22 @@ button {
     &:before {
         content: "";
         position: absolute;
-        top: 4%;
-        left: 4%;
-        width: 116%;
-        height: 116%;
+        top: 6px;
+        left: 6px;
+        width: 100%;
+        height: 100%;
         background-image: radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.25) 50%, transparent 70%);
         z-index: -1;
     }
     &:after {
         content: "";
         position: absolute;
-        width: 100%;
-        height: 100%;
-        top: 5%;
-        left: 10%;
+        width: 60%;
+        height: 60%;
+        top: 12%;
+        left: 24%;
         border-radius: 50%;
-        background-image: radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8) 30%, rgba(255, 255, 255, 0) 40%);
+        background-image: radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 60%);
         transform: translateX(-25%) translateY(-25%) skewX(-30deg);
         -webkit-filter: blur(8px);
         filter: blur(8px);
