add support for drag'n'drop interaction for Ball component

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -87,15 +87,13 @@ button {
 }
 
 .ball {
+    position: relative;
     display: inline-block;
     width: 40px;
     height: 40px;
     margin-right: 0.5em;
-    border-radius: 50%;
-    box-sizing: border-box;
-    -webkit-user-select: none;
-    position: relative;
-    box-shadow: inset -10px -10px 20px rgba(0,0,0,0.2);
+    user-select: none;
+    transition: transform 0.2s ease-out;
     &:last-child {
         margin-right: 0;
     }
@@ -107,7 +105,6 @@ button {
         width: 100%;
         height: 100%;
         background-image: radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.25) 50%, transparent 70%);
-        z-index: -1;
     }
     &:after {
         content: "";
@@ -119,12 +116,25 @@ button {
         border-radius: 50%;
         background-image: radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 60%);
         transform: translateX(-25%) translateY(-25%) skewX(-30deg);
-        -webkit-filter: blur(8px);
         filter: blur(8px);
     }
     &.active {
         cursor: pointer;
     }
+    &.dradding {
+        opacity: 0.6;
+    }
+    &.over {
+        transform: translateY(-2px);
+    }
+}
+
+.ball__content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    box-shadow: inset -10px -10px 20px rgba(0,0,0,0.2);
 }
 
 .result-panel {
@@ -143,7 +153,6 @@ button {
     height: 8px;
     display: inline-block;
     border-radius: 50%;
-    box-sizing: border-box;
     &.bull {
         background-color: black;
     }
