--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -131,8 +131,10 @@ button {
 
 .ball__content {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
     border-radius: 50%;
     box-shadow: inset -10px -10px 20px rgba(0,0,0,0.2);
 }
