--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -34,6 +34,7 @@ main {
         padding: 0 calc(50% - #{$width}/2 + #{$padding});
     }
     margin-top: $headerHeight;
+    min-height: calc(100vh - #{$headerHeight});
 }
 
 p {
@@ -65,12 +66,11 @@ ul {
 }
 
 .menu {
-    position: fixed;
-    top: 32px;
-    right: 0;
-    bottom: 0;
-    left: 0;
+    position: absolute;
+    top: 0;
     z-index: 1;
+    width: 100%;
+    min-height: calc(100vh - #{$headerHeight});
     display: flex;
     justify-content: center;
     align-items: center;
