--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,6 +1,6 @@
 $width: 412px;
 $padding: 16px;
-$headerHeight: 32px;
+$headerHeight: 40px;
 
 * {
     box-sizing: border-box;
@@ -9,32 +9,6 @@ $headerHeight: 32px;
 body {
     margin: 0;
     font-family: Helvetica, Arial, sans-serif;
-}
-
-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    height: $headerHeight;
-    padding: 0 $padding;
-    @media only screen and (min-width: $width) {
-        padding: 0 calc(50% - #{$width}/2 + #{$padding});
-    }
-    background-color: whitesmoke;
-}
-
-main {
-    padding: 0 $padding;
-    @media only screen and (min-width: $width) {
-        padding: 0 calc(50% - #{$width}/2 + #{$padding});
-    }
-    margin-top: $headerHeight;
-    min-height: calc(100vh - #{$headerHeight});
 }
 
 p {
@@ -57,32 +31,49 @@ ul {
     list-style: none;
 }
 
-.custom-drag-layer {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    pointer-events: none;
-    z-index: 1000;
+.main {
+    padding: 0 $padding;
+    @media only screen and (min-width: $width) {
+        padding: 0 calc(50% - #{$width}/2 + #{$padding});
+    }
+    margin-top: $headerHeight;
 }
 
 .menu {
-    position: absolute;
+    position: fixed;
     top: 0;
+    left: 0;
     z-index: 1;
     width: 100%;
-    min-height: calc(100vh - #{$headerHeight});
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    height: 100vh;
+    overflow: auto;
     padding: 0 $padding;
     @media only screen and (min-width: $width) {
         padding: 0 calc(50% - #{$width}/2 + #{$padding});
     }
     background-color: whitesmoke;
+    transform: translateX(100%);
+    transition: transform 0.2s ease-in-out;
+    &.menu--open {
+        transform: translateX(0);
+    }
+}
+
+.menu__header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: stretch;
+    height: $headerHeight;
+}
+
+.menu__body {
+    display: flex;
+    height: calc(100vh - #{$headerHeight});
 }
 
 .menu__list {
     width: 100%;
+    margin: auto;
     text-align: center;
 }
 
@@ -90,17 +81,41 @@ ul {
     width: 100%;
     border: none;
     border-radius: 0;
-    line-height: 2em;
+        font-size: 1rem;
+    line-height: 4em;
+    text-transform: uppercase;
     &:hover {
         background-color: white;
     }
 }
 
-.game {
-    position: relative;
+.custom-drag-layer {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    pointer-events: none;
+    z-index: 1000;
 }
 
-.game-stats {
+.game-header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    height: $headerHeight;
+    padding: 0 $padding;
+    @media only screen and (min-width: $width) {
+        padding: 0 calc(50% - #{$width}/2 + #{$padding});
+    }
+    background-color: whitesmoke;
+}
+
+.game-header__stats {
     display: flex;
     align-items: center;
     font-size: 0.75rem;
@@ -138,6 +153,7 @@ ul {
 }
 
 .guess-panel__btn {
+    flex-shrink: 0;
     width: 40px;
     svg {
         width: 16px;
@@ -206,8 +222,10 @@ ul {
 
 .result-panel {
     display: flex;
+    flex-shrink: 0;
     flex-wrap: wrap;
     width: 40px;
+    height: 40px;
     padding: 2px 0;
     justify-content: space-around;
     align-items: center;
@@ -226,7 +244,7 @@ ul {
     &.cow {
         background-color: white;
     }
-    &:nth-child(3n):not(:nth-last-child(2)) {
+    &:nth-child(3):nth-last-child(3) {
         margin-left: calc((100% - 8px)/2);
         margin-right: calc((100% - 8px)/2);
     }
