--- a/main.css
+++ b/main.css
@@ -5,29 +5,6 @@ body {
   margin: 0;
   font-family: Helvetica, Arial, sans-serif; }
 
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  z-index: 1;
-  display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-  height: 32px;
-  padding: 0 16px;
-  background-color: whitesmoke; }
-  @media only screen and (min-width: 412px) {
-    header {
-      padding: 0 calc(50% - 412px/2 + 16px); } }
-
-main {
-  padding: 0 16px;
-  margin-top: 32px; }
-  @media only screen and (min-width: 412px) {
-    main {
-      padding: 0 calc(50% - 412px/2 + 16px); } }
-
 p {
   margin: 0; }
 
@@ -45,17 +22,81 @@ ul {
   margin: 0;
   list-style: none; }
 
+.main {
+  padding: 0 16px;
+  margin-top: 40px; }
+  @media only screen and (min-width: 412px) {
+    .main {
+      padding: 0 calc(50% - 412px/2 + 16px); } }
+
+.menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+  padding: 0 16px;
+  background-color: whitesmoke;
+  transform: translateX(100%);
+  transition: transform 0.2s ease-in-out; }
+  @media only screen and (min-width: 412px) {
+    .menu {
+      padding: 0 calc(50% - 412px/2 + 16px); } }
+  .menu.menu--open {
+    transform: translateX(0); }
+
+.menu__header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: stretch;
+  height: 40px; }
+
+.menu__body {
+  display: flex;
+  height: calc(100vh - 40px); }
+
+.menu__list {
+  width: 100%;
+  margin: auto;
+  text-align: center; }
+
+.menu__item {
+  width: 100%;
+  border: none;
+  border-radius: 0;
+  font-size: 1rem;
+  line-height: 4em;
+  text-transform: uppercase; }
+  .menu__item:hover {
+    background-color: white; }
+
 .custom-drag-layer {
   position: fixed;
   top: 0;
+  left: 0;
   width: 100%;
   pointer-events: none;
   z-index: 1000; }
 
-.game {
-  position: relative; }
+.game-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: stretch;
+  height: 40px;
+  padding: 0 16px;
+  background-color: whitesmoke; }
+  @media only screen and (min-width: 412px) {
+    .game-header {
+      padding: 0 calc(50% - 412px/2 + 16px); } }
 
-.game-stats {
+.game-header__stats {
   display: flex;
   align-items: center;
   font-size: 0.75rem; }
@@ -86,6 +127,7 @@ ul {
     margin-right: 0; }
 
 .guess-panel__btn {
+  flex-shrink: 0;
   width: 40px; }
   .guess-panel__btn svg {
     width: 16px; }
@@ -125,9 +167,9 @@ ul {
     content: none; }
   .ball.dradding {
     opacity: 0.6; }
-  .ball.over {
+  .ball.over:not(.dradding) {
     transform: translateY(-2px); }
-    .ball.over:before {
+    .ball.over:not(.dradding):before {
       transform: translateY(2px); }
 
 .ball__content {
@@ -141,8 +183,10 @@ ul {
 
 .result-panel {
   display: flex;
+  flex-shrink: 0;
   flex-wrap: wrap;
   width: 40px;
+  height: 40px;
   padding: 2px 0;
   justify-content: space-around;
   align-items: center; }
@@ -158,7 +202,7 @@ ul {
     background-color: black; }
   .key.cow {
     background-color: white; }
-  .key:nth-child(3n):not(:nth-last-child(2)) {
+  .key:nth-child(3):nth-last-child(3) {
     margin-left: calc((100% - 8px)/2);
     margin-right: calc((100% - 8px)/2); }
 
