--- a/main.css
+++ b/main.css
@@ -23,8 +23,7 @@ ul {
   list-style: none; }
 
 .main {
-  padding: 0 16px;
-  margin-top: 40px; }
+  padding: 0 16px; }
   @media only screen and (min-width: 412px) {
     .main {
       padding: 0 calc(50% - 412px/2 + 16px); } }
@@ -80,6 +79,9 @@ ul {
   pointer-events: none;
   z-index: 1000; }
 
+.game {
+  padding-top: 40px; }
+
 .game-header {
   position: fixed;
   top: 0;
@@ -129,8 +131,6 @@ ul {
 .guess-panel__btn {
   flex-shrink: 0;
   width: 40px; }
-  .guess-panel__btn svg {
-    width: 16px; }
 
 .ball {
   position: relative;
@@ -220,5 +220,12 @@ ul {
 .icon {
   width: 40px;
   border: none; }
-  .icon svg {
-    width: 16px; }
+
+.svg-icon {
+  height: 16px;
+  width: 16px;
+  fill: none;
+  stroke: currentColor;
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round; }
