--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -8,7 +8,10 @@ $headerHeight: 40px;
 
 body {
     margin: 0;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont,
+        "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Fira Sans",
+        "Droid Sans", "Helvetica Neue", sans-serif;
 }
 
 p {
