--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,283 +1,6 @@
-$width: 412px;
-$padding: 16px;
-$headerHeight: 40px;
-
-* {
-    box-sizing: border-box;
-}
-
-body {
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont,
-        "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Fira Sans",
-        "Droid Sans", "Helvetica Neue", sans-serif;
-}
-
-p {
-    margin: 0;
-}
-
-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    border-radius: 0.5em;
-    cursor: pointer;
-    outline: none;
-}
-
-ul {
-    padding: 0;
-    margin: 0;
-    list-style: none;
-}
-
-.main {
-    padding: 0 $padding;
-    @media only screen and (min-width: $width) {
-        padding: 0 calc(50% - #{$width}/2 + #{$padding});
-    }
-}
-
-.menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 1;
-    width: 100%;
-    height: 100vh;
-    overflow: auto;
-    padding: 0 $padding;
-    @media only screen and (min-width: $width) {
-        padding: 0 calc(50% - #{$width}/2 + #{$padding});
-    }
-    background-color: whitesmoke;
-    transform: translateX(100%);
-    transition: transform 0.2s ease-in-out;
-    &.menu--open {
-        transform: translateX(0);
-    }
-}
-
-.menu__header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: stretch;
-    height: $headerHeight;
-}
-
-.menu__body {
-    display: flex;
-    height: calc(100vh - #{$headerHeight});
-}
-
-.menu__list {
-    width: 100%;
-    margin: auto;
-    text-align: center;
-}
-
-.menu__item {
-    width: 100%;
-    border: none;
-    border-radius: 0;
-        font-size: 1rem;
-    line-height: 4em;
-    text-transform: uppercase;
-    &:hover {
-        background-color: white;
-    }
-}
-
-.custom-drag-layer {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    pointer-events: none;
-    z-index: 1000;
-}
-
-.game {
-    padding-top: $headerHeight;
-}
-
-.game-header {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 1;
-    display: flex;
-    justify-content: space-between;
-    align-items: stretch;
-    height: $headerHeight;
-    padding: 0 $padding;
-    @media only screen and (min-width: $width) {
-        padding: 0 calc(50% - #{$width}/2 + #{$padding});
-    }
-    background-color: whitesmoke;
-}
-
-.game-header__stats {
-    display: flex;
-    align-items: center;
-    font-size: 0.75rem;
-}
-
-.game-result {
-    text-align: center;
-}
-
-.game-result__text {
-    padding: 0.5em 0;
-    font-size: 1rem;
-}
-
-.board {
-    box-sizing: content-box;
-    display: flex;
-    justify-content: space-between;
-    height: 40px;
-    padding: 0.5em 0;
-}
-
-.guess-panel {
-    display: flex;
-    flex: auto;
-    justify-content: center;
-    margin-right: 1em;
-}
-
-.guess-panel__item {
-    margin-right: 0.5em;
-    &:last-child {
-        margin-right: 0;
-    }
-}
-
-.guess-panel__btn {
-    flex-shrink: 0;
-    width: 40px;
-}
-
-.ball {
-    position: relative;
-    display: inline-block;
-    width: 40px;
-    height: 40px;
-    user-select: none;
-    transition: transform 0.2s ease-out;
-    &:before {
-        content: "";
-        position: absolute;
-        top: 6px;
-        left: 6px;
-        width: 100%;
-        height: 100%;
-        background-image: radial-gradient(circle at 50% 50%, rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.25) 50%, transparent 70%);
-        pointer-events: none;
-        transition: transform 0.2s ease-out;
-    }
-    &:after {
-        content: "";
-        position: absolute;
-        width: 60%;
-        height: 60%;
-        top: 12%;
-        left: 24%;
-        border-radius: 50%;
-        background-image: radial-gradient(circle at 50% 50%, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8) 50%, rgba(255, 255, 255, 0) 60%);
-        transform: translateX(-25%) translateY(-25%) skewX(-30deg);
-        filter: blur(8px);
-        pointer-events: none;
-    }
-    &.active {
-        cursor: pointer;
-    }
-    &.preview {
-        &:before {
-            content: none;
-        }
-    }
-    &.dradding {
-        opacity: 0.6;
-    }
-    &.over:not(.dradding) {
-        transform: translateY(-2px);
-        &:before {
-            transform: translateY(2px);
-        }
-    }
-}
-
-.ball__content {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    border-radius: 50%;
-    box-shadow: inset -10px -10px 20px rgba(0,0,0,0.2);
-}
-
-.result-panel {
-    display: flex;
-    flex-shrink: 0;
-    flex-wrap: wrap;
-    width: 40px;
-    height: 40px;
-    padding: 2px 0;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.key {
-    margin: 2px 4px;
-    border: 1px solid;
-    width: 8px;
-    height: 8px;
-    display: inline-block;
-    border-radius: 50%;
-    &.bull {
-        background-color: black;
-    }
-    &.cow {
-        background-color: white;
-    }
-    &:nth-child(3):nth-last-child(3) {
-        margin-left: calc((100% - 8px)/2);
-        margin-right: calc((100% - 8px)/2);
-    }
-}
-
-.btn-block {
-    display: flex;
-    justify-content: flex-end;
-    padding: 0.5em 0;
-}
-
-.btn-block__button {
-    padding: 0.5em;
-    margin-right: 0.5em;
-    &:last-child {
-        margin-right: 0;
-    }
-}
-
-.icon {
-    width: 40px;
-    border: none;
-}
-
-.svg-icon {
-    height: 16px;
-    width: 16px;
-    fill: none;
-    stroke: currentColor;
-    stroke-width: 2;
-    stroke-linecap: round;
-    stroke-linejoin: round;
-}
+@import "variables.scss";
+@import "tags.scss";
+@import "menu.scss";
+@import "game.scss";
+@import "board.scss";
+@import "ball.scss";
