--- a/src/css/tags.scss
+++ b/src/css/tags.scss
@@ -22,6 +22,7 @@ button {
     border-radius: 0.5em;
     cursor: pointer;
     outline: none;
+    -webkit-tap-highlight-color: transparent;
 }
 
 ul {
