--- a/src/css/menu.scss
+++ b/src/css/menu.scss
@@ -13,6 +13,7 @@
     background-color: whitesmoke;
     transform: translateX(100%);
     transition: transform 0.2s ease-in-out;
+    will-change: transform;
     &.menu--open {
         transform: translateX(0);
     }
