--- a/main.css
+++ b/main.css
@@ -34,22 +34,17 @@ ul {
   padding: 0 16px;
   background-color: whitesmoke;
   transform: translateX(100%);
-  transition: transform 0.2s ease-in-out; }
+  transition: transform 0.2s ease-in-out;
+  will-change: transform; }
   @media only screen and (min-width: 412px) {
     .menu {
       padding: 0 calc(50% - 412px/2 + 16px); } }
   .menu.menu--open {
     transform: translateX(0); }
 
-.menu__header {
-  display: flex;
-  justify-content: flex-end;
-  align-items: stretch;
-  height: 40px; }
-
 .menu__body {
   display: flex;
-  height: calc(100vh - 40px); }
+  height: 100vh; }
 
 .menu__list {
   width: 100%;
@@ -148,6 +143,9 @@ ul {
   height: 40px;
   padding: 0.5em 0; }
 
+.active-board.fade-in {
+  animation: fade-in 0.4s ease-in; }
+
 .guess-panel {
   display: flex;
   flex: auto;
@@ -163,30 +161,11 @@ ul {
   flex-shrink: 0;
   width: 40px; }
 
-.result-panel {
-  display: flex;
-  flex-shrink: 0;
-  flex-wrap: wrap;
-  width: 40px;
-  height: 40px;
-  padding: 2px 0;
-  justify-content: space-around;
-  align-items: center; }
-
-.key {
-  margin: 2px 4px;
-  border: 1px solid;
-  width: 8px;
-  height: 8px;
-  display: inline-block;
-  border-radius: 50%; }
-  .key.bull {
-    background-color: black; }
-  .key.cow {
-    background-color: white; }
-  .key:nth-child(3):nth-last-child(3) {
-    margin-left: calc((100% - 8px)/2);
-    margin-right: calc((100% - 8px)/2); }
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
 
 .ball {
   position: relative;
@@ -237,3 +216,28 @@ ul {
   left: 0;
   border-radius: 50%;
   box-shadow: inset -10px -10px 20px rgba(0, 0, 0, 0.2); }
+
+.key-panel {
+  display: flex;
+  flex-shrink: 0;
+  flex-wrap: wrap;
+  width: 40px;
+  height: 40px;
+  padding: 2px 0;
+  justify-content: space-around;
+  align-items: center; }
+
+.key {
+  margin: 2px 4px;
+  border: 1px solid;
+  width: 8px;
+  height: 8px;
+  display: inline-block;
+  border-radius: 50%; }
+  .key.bull {
+    background-color: black; }
+  .key.cow {
+    background-color: white; }
+  .key:nth-child(3):nth-last-child(3) {
+    margin-left: calc((100% - 8px)/2);
+    margin-right: calc((100% - 8px)/2); }
