--- a/src/css/board.scss
+++ b/src/css/board.scss
@@ -10,7 +10,7 @@
     display: flex;
     flex: auto;
     justify-content: center;
-    margin-right: 1em;
+    margin: 0 1em 0 0;
 }
 
 .guess-panel__item {
