--- a/src/css/tags.scss
+++ b/src/css/tags.scss
@@ -8,6 +8,8 @@ body {
         "Segoe UI", Roboto, Oxygen,
         Ubuntu, Cantarell, "Fira Sans",
         "Droid Sans", "Helvetica Neue", sans-serif;
+    background-color: $mainBgColor;
+    color: $mainColor;
 }
 
 p {
@@ -31,9 +33,10 @@ ol {
 button {
     display: flex;
     justify-content: center;
+    border-radius: 0.5em;
     align-items: center;
     background-color: transparent;
-    border-radius: 0.5em;
+    color: currentColor;
     cursor: pointer;
     outline: none;
     -webkit-tap-highlight-color: transparent;
