--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,3 +1,8 @@
 $width: 412px;
 $padding: 16px;
 $headerHeight: 40px;
+
+$mainBgColor: #f5f5f6;
+$mainColor: black;
+$menuBgColor: #606060;
+$menuColor: #fbfbfb;
