--- a/main.css
+++ b/main.css
@@ -1,29 +1,47 @@
+.animation-container.fade-in {
+  animation: fade-in 0.4s ease-in; }
+
+@-webkit-keyframes fade-in {
+  0% {
+    opacity: 0; }
+  100% {
+    opacity: 1; } }
+
 * {
   box-sizing: border-box; }
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif; }
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  background-color: #f5f5f6;
+  color: black; }
 
 p {
-  margin: 0; }
+  margin-top: 0;
+  margin-bottom: 0.5em; }
+  p:last-child {
+    margin-bottom: 0; }
+
+ul {
+  padding: 0;
+  margin: 0.5em 0;
+  list-style: none; }
+
+ol {
+  margin: 0.5em 0; }
 
 button {
   display: flex;
   justify-content: center;
+  border-radius: 0.5em;
   align-items: center;
   background-color: transparent;
-  border-radius: 0.5em;
+  color: currentColor;
   cursor: pointer;
   outline: none;
   -webkit-tap-highlight-color: transparent; }
 
-ul {
-  padding: 0;
-  margin: 0;
-  list-style: none; }
-
-.menu {
+.menu, .submenu {
   position: fixed;
   top: 0;
   left: 0;
@@ -32,19 +50,35 @@ ul {
   height: 100vh;
   overflow: auto;
   padding: 0 16px;
-  background-color: whitesmoke;
+  background-color: #606060;
+  color: #fbfbfb; }
+  @media only screen and (min-width: 412px) {
+    .menu, .submenu {
+      padding: 0 calc(50% - 412px/2 + 16px); } }
+
+.menu {
   transform: translateX(100%);
   transition: transform 0.2s ease-in-out;
   will-change: transform; }
-  @media only screen and (min-width: 412px) {
-    .menu {
-      padding: 0 calc(50% - 412px/2 + 16px); } }
   .menu.menu--open {
     transform: translateX(0); }
+
+.submenu {
+  display: none; }
+  .submenu.submenu--open {
+    display: block; }
+
+.menu__header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: stretch;
+  height: 40px; }
 
 .menu__body {
   display: flex;
   height: 100vh; }
+  .menu__body.menu__body--with-header {
+    height: calc(100vh - 40px); }
 
 .menu__list {
   width: 100%;
@@ -56,10 +90,11 @@ ul {
   border: none;
   border-radius: 0;
   font-size: 1rem;
-  line-height: 4em;
-  text-transform: uppercase; }
+  line-height: 3em;
+  text-transform: uppercase;
+  transition: opacity 0.2s ease-in; }
   .menu__btn:hover {
-    background-color: white; }
+    opacity: 0.75; }
 
 .menu__separator:first-child, .menu__separator:last-child {
   display: none; }
@@ -95,7 +130,8 @@ ul {
   align-items: stretch;
   height: 40px;
   padding: 0 16px;
-  background-color: whitesmoke; }
+  background-color: #606060;
+  color: #fbfbfb; }
   @media only screen and (min-width: 412px) {
     .game-header {
       padding: 0 calc(50% - 412px/2 + 16px); } }
@@ -103,14 +139,15 @@ ul {
 .game-header__stats {
   display: flex;
   align-items: center;
-  font-size: 0.75rem; }
+  font-size: 1rem; }
 
 .game-result {
   text-align: center; }
 
 .game-result__text {
   padding: 0.5em 0;
-  font-size: 1rem; }
+  font-size: 1rem;
+  margin: 0; }
 
 .btn-block {
   display: flex;
@@ -119,17 +156,23 @@ ul {
 
 .btn-block__button {
   padding: 0.5em;
-  margin-right: 0.5em; }
+  margin-right: 0.5em;
+  background-color: #606060;
+  color: #fbfbfb;
+  border: none; }
   .btn-block__button:last-child {
     margin-right: 0; }
 
 .icon {
   width: 40px;
-  border: none; }
+  border: none;
+  transition: opacity 0.2s ease-in; }
+  .icon:hover {
+    opacity: 0.75; }
 
 .svg-icon {
-  height: 16px;
-  width: 16px;
+  height: 20px;
+  width: 20px;
   fill: none;
   stroke: currentColor;
   stroke-width: 2;
@@ -143,14 +186,11 @@ ul {
   height: 40px;
   padding: 0.5em 0; }
 
-.active-board.fade-in {
-  animation: fade-in 0.4s ease-in; }
-
 .guess-panel {
   display: flex;
   flex: auto;
   justify-content: center;
-  margin-right: 1em; }
+  margin: 0 8px 0 0; }
 
 .guess-panel__item {
   margin-right: 0.5em; }
@@ -159,13 +199,10 @@ ul {
 
 .guess-panel__btn {
   flex-shrink: 0;
-  width: 40px; }
-
-@-webkit-keyframes fade-in {
-  0% {
-    opacity: 0; }
-  100% {
-    opacity: 1; } }
+  width: 40px;
+  background-color: #606060;
+  color: #fbfbfb;
+  border: none; }
 
 .ball {
   position: relative;
@@ -241,3 +278,9 @@ ul {
   .key:nth-child(3):nth-last-child(3) {
     margin-left: calc((100% - 8px)/2);
     margin-right: calc((100% - 8px)/2); }
+
+.tutorial {
+  padding: 16px 0;
+  margin-bottom: auto;
+  border-top: 1px solid;
+  text-align: justify; }
