--- a/src/css/board.scss
+++ b/src/css/board.scss
@@ -22,6 +22,9 @@
 
 .guess-panel__btn {
     flex-shrink: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 40px;
     background-color: $menuBgColor;
     color: $menuColor;
