--- a/src/css/game.scss
+++ b/src/css/game.scss
@@ -59,7 +59,7 @@
 }
 
 .btn-block__button {
-    padding: 0.5em;
+    padding: 0.75em;
     margin-right: 0.5em;
     background-color: $menuBgColor;
     color: $menuColor;
@@ -72,6 +72,7 @@
 .icon {
     width: 40px;
     border: none;
+    font-size: 1rem;
     transition: opacity 0.2s ease-in;
     &:hover {
         opacity: 0.75;
