--- a/src/css/menu.scss
+++ b/src/css/menu.scss
@@ -35,6 +35,7 @@
     justify-content: flex-end;
     align-items: stretch;
     height: $headerHeight;
+    border-bottom: 1px solid;
 }
 
 .menu__body {
