--- a/src/css/tags.scss
+++ b/src/css/tags.scss
@@ -12,6 +12,12 @@ body {
     color: $mainColor;
 }
 
+h1, h2 {
+    margin: 0.5em 0;
+    text-align: center;
+    font-weight: normal;
+}
+
 p {
     margin-top: 0;
     margin-bottom: 0.5em;
@@ -31,10 +37,8 @@ ol {
 }
 
 button {
-    display: flex;
-    justify-content: center;
     border-radius: 0.5em;
-    align-items: center;
+    text-align: center;
     background-color: transparent;
     color: currentColor;
     cursor: pointer;
