--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
-@import "variables.scss";
-@import "utils.scss";
-@import "tags.scss";
+@import "_variables.scss";
+@import "_utils.scss";
+@import "_tags.scss";
 @import "menu.scss";
 @import "game.scss";
 @import "board.scss";
