--- a/main.css
+++ b/main.css
@@ -16,6 +16,11 @@ body {
   background-color: #f5f5f6;
   color: black; }
 
+h1, h2 {
+  margin: 0.5em 0;
+  text-align: center;
+  font-weight: normal; }
+
 p {
   margin-top: 0;
   margin-bottom: 0.5em; }
@@ -31,10 +36,8 @@ ol {
   margin: 0.5em 0; }
 
 button {
-  display: flex;
-  justify-content: center;
   border-radius: 0.5em;
-  align-items: center;
+  text-align: center;
   background-color: transparent;
   color: currentColor;
   cursor: pointer;
@@ -72,7 +75,8 @@ button {
   display: flex;
   justify-content: flex-end;
   align-items: stretch;
-  height: 40px; }
+  height: 40px;
+  border-bottom: 1px solid; }
 
 .menu__body {
   display: flex;
@@ -155,7 +159,7 @@ button {
   padding: 0.5em 0; }
 
 .btn-block__button {
-  padding: 0.5em;
+  padding: 0.75em;
   margin-right: 0.5em;
   background-color: #606060;
   color: #fbfbfb;
@@ -164,8 +168,12 @@ button {
     margin-right: 0; }
 
 .icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 40px;
   border: none;
+  font-size: 1rem;
   transition: opacity 0.2s ease-in; }
   .icon:hover {
     opacity: 0.75; }
@@ -199,6 +207,9 @@ button {
 
 .guess-panel__btn {
   flex-shrink: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 40px;
   background-color: #606060;
   color: #fbfbfb;
@@ -280,7 +291,6 @@ button {
     margin-right: calc((100% - 8px)/2); }
 
 .tutorial {
-  padding: 16px 0;
+  padding: 8px 0;
   margin-bottom: auto;
-  border-top: 1px solid;
   text-align: justify; }
