prevent text selection of buttons content

--- a/src/styles/_tags.scss
+++ b/src/styles/_tags.scss
@@ -43,5 +43,6 @@ button {
     color: currentColor;
     cursor: pointer;
     outline: none;
+    user-select: none;
     -webkit-tap-highlight-color: transparent;
 }
