--- a/main.css
+++ b/main.css
@@ -42,6 +42,7 @@ button {
   color: currentColor;
   cursor: pointer;
   outline: none;
+  user-select: none;
   -webkit-tap-highlight-color: transparent; }
 
 .menu, .submenu {
