--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -52,6 +52,18 @@
     text-align: center;
 }
 
+.menu__group {
+    margin: 0;
+    &:not(:last-child):after {
+        content: '';
+        display: block;
+        width: 48%;
+        height: 1px;
+        margin: 8px auto;
+        background-color: currentColor;
+    }
+}
+
 .menu__btn {
     width: 100%;
     border: none;
@@ -63,14 +75,4 @@
     &:hover {
         opacity: 0.75;
     }
-}
-
-.menu__separator {
-    &:first-child, &:last-child {
-        display: none;
-    }
-}
-
-.menu__default-separator-element {
-    width: 60%;
 }
